--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 X Add custom highlight colour definition
-* Add function to remove all gcov highlighting from current file
+X Add function to remove all gcov highlighting from current file
 * Make ShowGcov() take no arguments and search for the .gcov file for the current file in the current directory and below
 * Make ShowGcov() take a filename argument for the .gcov file
