--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 X Add custom highlight colour definition
 X Add function to remove all gcov highlighting from current file
 * Make ShowGcov() take no arguments and search for the .gcov file for the current file in the same directory as the current file.
-  * The search all it's child directories.
+  * Search the current directory.
+  * Then search all it's child directories.
   * Then search in the parent directory and all it's children.
   * Then the grand-parent directory and all children and so on.
   * If file is not found print an error message.
