Added some new todos for key mappigngs, aborting and messages

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,11 @@
 X Add custom highlight colour definition
 X Add function to remove all gcov highlighting from current file
 * Make ShowGcov() take no arguments and search for the .gcov file for the current file in the same directory as the current file.
-  * Search the current directory.
-  * Then search all it's child directories.
-  * Then search in the parent directory and all it's children.
+  X Search the current directory.
+  * Then search all it's child directories recursively.
+  * Then search in the parent directory and all it's children excluding the original directory.
   * Then the grand-parent directory and all children and so on.
   * If file is not found print an error message.
-* Make ShowGcov() take a filename argument for the .gcov file
+* Add default key mappings, e.g. <leader>gcs  (gcov show), <leader>gch  (gcov hide)
+* Give messages to indicate progress in searching directories
+* Give option to abort mid search for gcov file
